--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,8 @@
 			<section id="main" class="wrapper style1">
 				<header class="major">
 					<h2>Contact</h2>
-					<p>I look forward to working together!</p>
+					<p>Contact us at any time to discuss your specific needs,</br>
+                        and we will come up with a specific solution for you.</p>
 				</header>
 				<div class="container">
 
@@ -34,7 +35,6 @@
 
 							<!-- Form -->
 								<section>
-									<h3>Contact Us</h3>
 									<form method="post" action="#">
 										<div class="row gtr-uniform">
 											<div class="col-6 col-12-small">
