--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 
 <head>
-	<title>Untitled</title>
+	<title>Home - Bentancourt Enterprise</title>
+	<link rel="icon" href="images/JB_LOGO.png"/>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="assets/css/main.css" />
@@ -116,7 +117,7 @@
 					<article class="box post">
 						<a href="#" class="image fit"><img src="images/surveying.jpg" alt="" /></a>
 						<h3>Surveying</h3>
-						<p>If you would like more information on what I can offer as a surveryor please click the link below.</p>
+						<p>If you would like more information on what I can offer as a surveyor please click the link below.</p>
 						<ul class="actions special">
 							<li><a href="#" class="button">Learn More</a></li>
 						</ul>
