--- a/index.html
+++ b/index.html
@@ -48,24 +48,6 @@
 					cross-sections, profiles, volume & area calculations, etc. Every project has different needs, we can help advising<br />
 					on exactly what surveying services you are required and we can provide.</p>
 			</header>
-			<!-- <div class="slider">
-				<span class="nav-previous"></span>
-				<div class="viewer">
-					<div class="reel">
-						<div class="slide">
-							<img src="images/slide01.jpg" alt="" />
-						</div>
-						<div class="slide">
-							<img src="images/slide02.jpg" alt="" />
-						</div>
-						<div class="slide">
-							<img src="images/slide03.jpg" alt="" />
-						</div>
-					</div>
-				</div>
-				<span class="nav-next"></span>
-			</div>
-		</div> -->
 	</section>
 
 	<!-- Two -->
@@ -115,21 +97,21 @@
 			<div class="row">
 				<div class="col-6 col-6-medium col-12-small">
 					<article class="box post">
-						<a href="#" class="image fit"><img src="images/surveying.jpg" alt="" /></a>
+						<a href="images/surveying.jpg" class="image fit"><img src="images/surveying.jpg" alt="" /></a>
 						<h3>Surveying</h3>
 						<p>If you would like more information on what I can offer as a surveyor please click the link below.</p>
 						<ul class="actions special">
-							<li><a href="#" class="button">Learn More</a></li>
+							<li><a href="services.html#section-one" class="button">Learn More</a></li>
 						</ul>
 					</article>
 				</div>
 				<div class="col-6 col-6-medium col-12-small">
 					<article class="box post">
-						<a href="#" class="image fit"><img src="images/drone.jpg" alt="" /></a>
+						<a href="images/drone.jpg" class="image fit"><img src="images/drone.jpg" alt="" /></a>
 						<h3>Droning</h3>
 						<p>If you would like more information on what I can offer as a droner please click the link below.</p>
 						<ul class="actions special">
-							<li><a href="#" class="button">Learn More</a></li>
+							<li><a href="services.html#section-two" class="button">Learn More</a></li>
 						</ul>
 					</article>
 				</div>
