--- a/contact.html
+++ b/contact.html
@@ -36,13 +36,13 @@
 
 							<!-- Form -->
 								<section>
-									<form method="post" action="#">
+									<form name="contact" method="POST" data-netlify="true">
 										<div class="row gtr-uniform">
 											<div class="col-6 col-12-small">
-												<input type="text" name="name" id="name" value="" placeholder="Name" />
+												<input type="text" name="name" id="name" placeholder="Name" />
 											</div>
 											<div class="col-6 col-12-small">
-												<input type="email" name="email" id="email" value="" placeholder="Email" />
+												<input type="email" name="email" id="email" placeholder="Email" />
 											</div>
 											<div class="col-12">
 												<select name="category" id="category">
