--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 				<h2>Quality Work</h2>
 				<p>Juan Betancourt is a performance-driven international professional with more than 25 years of experience<br />
 					as a civil and survey engineer. He is an accomplished and analytical expert with notable success in management<br />
-					of planning, assessment, and implementation of surveying techniques for all type of construction industry.</p>
+					of planning, assessment, and implementation of surveying techniques for all types in the construction industry.</p>
 			</header>
 			<div class="row">
 				<div class="col-6 col-6-medium col-12-small">
