--- a/services.html
+++ b/services.html
@@ -106,7 +106,7 @@
 							<!-- Content -->
 								<section id="content">
 									<a href="images/construction.jpg" class="image fit"><img src="images/construction.jpg" alt="" /></a>
-									<h3>Engineering</h3>
+									<h3>Survey</h3>
 									<p>We provide regular, detailed maps of your site to ensure your project is on-schedule and within budget.</p>
 									<ul>
 										<li>Site-wide orthophoto</li>
