updated home page

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-	<title>Home - Bentancourt Enterprise</title>
+	<title>Home - JBeta Surveying Enterprises</title>
 	<link rel="icon" href="images/JB_LOGO.png"/>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -13,13 +13,12 @@
 
 	<!-- Header -->
 	<header id="header" class="alt ">
-		<h1><a href="index.html"> Betancourt<span> Ent.</span></a></h1>
+		<h1><a href="index.html">JBETA<span>surveying</span></a></h1>
 		<nav id="nav">
 			<ul>
 				<li><a href="index.html">Home</a></li>
 				<li><a href="services.html">Services & Equipment</a></li>
 				<li><a href="contact.html">Contact</a></li>
-				<li><a href="images/juan-betancourt-resume-2020.pdf">Resumé</a></li>
 			</ul>
 		</nav>
 	</header>
@@ -27,8 +26,7 @@
 	<!-- Banner -->
 	<section id="banner">
 		<div class="inner">
-			<h2>Betancourt T.&C. Enterprise</h2>
-			<p class="sub-title">Beyond Boundaries</p>
+			<img class="logo-img" src="/images/jbeta-logo.png" alt="logo">
 			<ul class="actions special">
 				<li><a href="#one" class="button large scrolly">Learn More</a></li>
 			</ul>
@@ -40,38 +38,64 @@
 		<div class="container">
 			<header class="major">
 				<h2>Who We Are</h2>
-				<img class="survey-img" src="/images/survey.jpg" alt="surveyor picture">
-				<p>Betancourt T & C Enterprise can offer many different surveying services depending of client needs.<br />
-					We work closely with engineers, architects, planners, lawyers, contractors and consultants at all phases<br />
-					of the project to ensure all the requirements are met achieving the greatest value to our clients.<br />
-					We can provide various data formats for your project such as: digital terrain model (DTM), surfaces, contours,<br />
-					cross-sections, profiles, volume & area calculations, etc. Every project has different needs, we can help advising<br />
-					on exactly what surveying services you are required and we can provide.</p>
+				<img class="survey-img" src="/images/banner3.jpg" alt="surveyor picture">
+				<p class="header-text">We are a local owned surveying operated firm totally focused on serving the needs of residential, commercial and industrial clients.
+					From bench-scale to full-scale our unflinching commitment to superior results in every engagement is unparalleled. 
+					We are always aiming to provide the best in class services and we will continue to deliver our high-quality design,
+					surveying and construction services to meet the needs of our clients.
+					We maintain a high standard of work at competitive rates and all size projects can be catered for.
+					We always welcome new enquiries and will be pleased to provide a no obligation quotation free of charge. 
+					We pride ourselves on our professionalism, efficiency, attention to detail and personalized service.
+					 Our flexible approach allows us to accommodate a custom-tailored service tailored to each individual client.
+					</p>
 			</header>
 	</section>
 
 	<!-- Two -->
 	<section id="two" class="wrapper style2">
 		<div class="container">
-			<h2 class="services">Services We Offer</h2>
-			<h3 class="services-txt">Surveying:</h3>
+			<h2 class="services">Core Values</h2>
 			<div class="row gtr-uniform">
-				<div class="col-6 col-6-medium col-12-small">
+				<div class="col-4 col-6-medium col-12-small">
 					<section class="feature fa-cogs">
-						<h3>Engineering</h3>
-						<p>We stablish any type of a control network on site for your project with the must accurate corrections and adjustments.</p>
+						<h3>Safety</h3>
+						<p class="values">We are dedicated to keeping our employees and our clients safe through training, education, and awareness. We safeguard company assets by complying with all company policies and government legislation.</p>
 					</section>
 				</div>
-				<div class="col-6 col-6-medium col-12-small">
-					<section class="feature fa-briefcase">
-						<h3>Construction</h3>
-						<p> We make sure your project is built from begin to end according to design.</p>
+				<div class="col-4 col-6-medium col-12-small">
+					<section class="feature fa-certificate">
+						<h3>Integrity</h3>
+						<p class="values">We set expectations that demand of ourselves the highest standards of individual and corporate integrity.</p>
+					</section>
+				</div>
+				<div class="col-4 col-6-medium col-12-small">
+					<section class="feature fa-handshake-o">
+						<h3>Respect & Fairness</h3>
+						<p class="values">We are dedicated to diversity, fair treatment; open and effective communication and interaction; mutual respect; and trust. We practice leadership that teaches, inspires, and promotes full participation and career development.</p>
+					</section>
+				</div>
+				<div class="col-4 col-6-medium col-12-small">
+					<section class="feature fa-envira">
+						<h3>Environment</h3>
+						<p class="values">We care about the environment in which we all live and are committed to safeguard and operate in a manner that is environmentally sensitive and responsible.</p>
+					</section>
+				</div>
+				<div class="col-4 col-6-medium col-12-small">
+					<section class="feature fa-line-chart">
+						<h3>Continuous Improvement</h3>
+						<p class="values">We create an operating discipline of continuous improvement that is integral to our culture. We foster an environment that encourages innovation, creativity, and results through teamwork and support.</p>
+					</section>
+				</div>
+				<div class="col-4 col-6-medium col-12-small">
+					<section class="feature fa-check-square-o">
+						<h3>Accountability</h3>
+						<p class="values">We honor the commitments we make, and take personal responsibility for all actions and results.</p>
 					</section>
 				</div>
 			</div>
 		</div>
 
-		<div class="container">
+		<!-- <div class="container">
 			<h3 class="services-txt">Droning:</h3>
 			<div class="row gtr-uniform">
 				<div class="col-6 col-6-medium col-12-small">
@@ -81,7 +105,7 @@
 					</section>
 				</div>
 			</div>
-		</div>
+		</div> -->
 		
 	</section>
 
@@ -89,10 +113,8 @@
 	<section id="three" class="wrapper style1">
 		<div class="container">
 			<header class="major">
-				<h2>Quality Work</h2>
-				<p>Juan Betancourt is a performance-driven international professional with more than 25 years of experience<br />
-					as a civil and survey engineer. He is an accomplished and analytical expert with notable success in management<br />
-					of planning, assessment, and implementation of surveying techniques for all types in the construction industry.</p>
+				<h2>Services We Offer</h2>
+				<p class="section-text">We are a local owned surveying operated firm totally focused on serving the needs of residential, commercial and industrial clients. From bench-scale to full-scale our unflinching commitment to superior results in every engagement is unparalleled. No matter the task, the scope nor the environment, JBETA Surveying Enterprises can offer many different surveying services depended on the client's needs.  We work closely with engineers, architects, planners, lawyers, contractors and consultants at all phases of the project to ensure all the requirements are met, achieving the greatest value to our clients. Every project has different needs, we can help advising on exactly what surveying services you are required and we can provide.</p>
 			</header>
 			<div class="row">
 				<div class="col-6 col-6-medium col-12-small">
@@ -123,14 +145,14 @@
 	<footer id="footer">
 		<ul class="icons">
 			<li><a target="_blank" href="https://www.linkedin.com/in/betancourtjuan/" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
-			<li><a target="_blank" href="mailto:BetancourtT&CEnterprise@gmail.com" class="icon fa-envelope"><span class="label">Envelope</span></a></li>
+			<li><a target="_blank" href="mailto:jbetasurveyingenterprises@gmail.com" class="icon fa-envelope"><span class="label">Envelope</span></a></li>
 		</ul>
 		<ul class="menu">
 			<li>P: <a href="tel:6472240884">647-224-0884</a></li>
-			<li>E: <a target="_blank" href="mailto:BetancourtT&CEnterprise@gmail.com">BetancourtT&CEnterprise@gmail.com</a></li>
+			<li>E: <a target="_blank" href="mailto:jbetasurveyingenterprises@gmail.com">jbetasurveyingenterprises@gmail.com</a></li>
 		</ul>
 		<span class="copyright">
-			&copy; Betancourt T.&C. Enterprise
+			&copy; JBETA SURVEYING ENTERPRISES
 		</span>
 	</footer>
 
