--- a/services.html
+++ b/services.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Services - Bentancourt Enterprise</title>
+		<title>Services - JBeta Surveying Enterprises</title>
 	<link rel="icon" href="images/JB_LOGO.png"/>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -11,13 +11,12 @@
 
 		<!-- Header -->
 			<header id="header">
-				<h1><a href="index.html"> Betancourt<span> Ent.</span></a></h1>
+				<h1><a href="index.html">JBETA<span>surveying</span></a></h1>
 		<nav id="nav">
 			<ul>
 				<li><a href="index.html">Home</a></li>
 				<li><a href="services.html">Services & Equipment</a></li>
 				<li><a href="contact.html">Contact</a></li>
-				<li><a href="images/juan-betancourt-resume-2020.pdf">Resumé</a></li>
 			</ul>
 		</nav>
 			</header>
