--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="assets/css/main.css" />
+	<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
 <body class="landing is-preload">
@@ -59,53 +60,41 @@
 				<div class="col-4 col-6-medium col-12-small">
 					<section class="feature fa-cogs">
 						<h3>Safety</h3>
-						<p class="values">We are dedicated to keeping our employees and our clients safe through training, education, and awareness. We safeguard company assets by complying with all company policies and government legislation.</p>
+						<p class="values" data-aos="fade-up" data-aos-duration="1000">We are dedicated to keeping our employees and our clients safe through training, education, and awareness. We safeguard company assets by complying with all company policies and government legislation.</p>
 					</section>
 				</div>
 				<div class="col-4 col-6-medium col-12-small">
 					<section class="feature fa-certificate">
 						<h3>Integrity</h3>
-						<p class="values">We set expectations that demand of ourselves the highest standards of individual and corporate integrity.</p>
+						<p class="values" data-aos="fade-up" data-aos-duration="1000">We set expectations that demand of ourselves the highest standards of individual and corporate integrity.</p>
 					</section>
 				</div>
 				<div class="col-4 col-6-medium col-12-small">
 					<section class="feature fa-handshake-o">
 						<h3>Respect & Fairness</h3>
-						<p class="values">We are dedicated to diversity, fair treatment; open and effective communication and interaction; mutual respect; and trust. We practice leadership that teaches, inspires, and promotes full participation and career development.</p>
+						<p class="values" data-aos="fade-up" data-aos-duration="1000">We are dedicated to diversity, fair treatment; open and effective communication and interaction; mutual respect; and trust. We practice leadership that teaches, inspires, and promotes full participation and career development.</p>
 					</section>
 				</div>
 				<div class="col-4 col-6-medium col-12-small">
 					<section class="feature fa-envira">
 						<h3>Environment</h3>
-						<p class="values">We care about the environment in which we all live and are committed to safeguard and operate in a manner that is environmentally sensitive and responsible.</p>
+						<p class="values" data-aos="fade-up" data-aos-duration="1000">We care about the environment in which we all live and are committed to safeguard and operate in a manner that is environmentally sensitive and responsible.</p>
 					</section>
 				</div>
 				<div class="col-4 col-6-medium col-12-small">
 					<section class="feature fa-line-chart">
 						<h3>Continuous Improvement</h3>
-						<p class="values">We create an operating discipline of continuous improvement that is integral to our culture. We foster an environment that encourages innovation, creativity, and results through teamwork and support.</p>
+						<p class="values" data-aos="fade-up" data-aos-duration="1000">We create an operating discipline of continuous improvement that is integral to our culture. We foster an environment that encourages innovation, creativity, and results through teamwork and support.</p>
 					</section>
 				</div>
 				<div class="col-4 col-6-medium col-12-small">
 					<section class="feature fa-check-square-o">
 						<h3>Accountability</h3>
-						<p class="values">We honor the commitments we make, and take personal responsibility for all actions and results.</p>
+						<p class="values" data-aos="fade-up" data-aos-duration="1000">We honor the commitments we make, and take personal responsibility for all actions and results.</p>
 					</section>
 				</div>
 			</div>
 		</div>
-
-		<!-- <div class="container">
-			<h3 class="services-txt">Droning:</h3>
-			<div class="row gtr-uniform">
-				<div class="col-6 col-6-medium col-12-small">
-					<section class="feature fa-video-camera">
-						<h3>Survey</h3>
-						<p>We provide regular, detailed maps of your site to ensure your project is on-schedule and within budget.</p>
-					</section>
-				</div>
-			</div>
-		</div> -->
 		
 	</section>
 
@@ -159,6 +148,7 @@
 	<!-- Scripts -->
 	<script src="assets/js/jquery.min.js"></script>
 	<script src="assets/js/jquery.dropotron.min.js"></script>
+	<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 	<script src="assets/js/jquery.scrollex.min.js"></script>
 	<script src="assets/js/jquery.scrolly.min.js"></script>
 	<script src="assets/js/jquery.slidertron.min.js"></script>
@@ -166,6 +156,9 @@
 	<script src="assets/js/breakpoints.min.js"></script>
 	<script src="assets/js/util.js"></script>
 	<script src="assets/js/main.js"></script>
+	<script>
+		AOS.init();
+	</script>
 
 </body>
 
