--- a/services.html
+++ b/services.html
@@ -6,6 +6,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 	</head>
 	<body class="is-preload">
 
@@ -25,7 +26,7 @@
 			<section id="main" class="wrapper style1">
 				<header class="major">
 					<h2>Services and Equipment</h2>
-					<p>Below you can find more detailed information on the services</br>
+					<p data-aos="fade-up" data-aos-duration="1000">Below you can find more detailed information on the services</br>
 						we offer, as well as the equipment we use.</p>
 				</header>
 				<div id="section-one" class="container">
@@ -134,6 +135,7 @@
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.dropotron.min.js"></script>
+			<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 			<script src="assets/js/jquery.scrollex.min.js"></script>
 			<script src="assets/js/jquery.scrolly.min.js"></script>
 			<script src="assets/js/jquery.slidertron.min.js"></script>
@@ -141,6 +143,9 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
+			<script>
+				AOS.init();
+			</script>
 
 	</body>
 </html>
