--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 		<div class="container">
 			<header class="major">
 				<h2>Services We Offer</h2>
-				<p class="section-text">We are a local owned surveying operated firm totally focused on serving the needs of residential, commercial and industrial clients. From bench-scale to full-scale our unflinching commitment to superior results in every engagement is unparalleled. No matter the task, the scope nor the environment, JBETA Surveying Enterprises can offer many different surveying services depended on the client's needs.  We work closely with engineers, architects, planners, lawyers, contractors and consultants at all phases of the project to ensure all the requirements are met, achieving the greatest value to our clients. Every project has different needs, we can help advising on exactly what surveying services you are required and we can provide.</p>
+				<p class="section-text">No matter the task, the scope nor the environment, JBETA Surveying Enterprises can offer many different surveying services depended on the client's needs.  We work closely with engineers, architects, planners, lawyers, contractors and consultants at all phases of the project to ensure all the requirements are met, achieving the greatest value to our clients. Every project has different needs, we can help advising on exactly what surveying services you are required and we can provide.</p>
 			</header>
 			<div class="row">
 				<div class="col-6 col-6-medium col-12-small" data-aos="fade-up" data-aos-duration="3000">
