--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	<!-- Banner -->
 	<section id="banner">
 		<div class="inner">
-			<img class="logo-img" src="/images/jbeta-logo.png" alt="logo">
+			<img class="logo-img" src="/images/jb-logo.png" alt="logo">
 			<ul class="actions special">
 				<li><a href="#one" class="button large scrolly">Learn More</a></li>
 			</ul>
