--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 					<article class="box post">
 						<a href="images/surveying.jpg" class="image fit"><img src="images/surveying.jpg" alt="" /></a>
 						<h3>Surveying</h3>
-						<p>If you would like more information on what I can offer as a surveyor please click the link below.</p>
+						<p>If you would like more information on what we can offer as a surveyor please click the link below.</p>
 						<ul class="actions special">
 							<li><a href="services.html#section-one" class="button">Learn More</a></li>
 						</ul>
@@ -120,7 +120,7 @@
 					<article class="box post">
 						<a href="images/drone.jpg" class="image fit"><img src="images/drone.jpg" alt="" /></a>
 						<h3>Droning</h3>
-						<p>If you would like more information on what I can offer as a droner please click the link below.</p>
+						<p>If you would like more information on what we can offer as a droner please click the link below.</p>
 						<ul class="actions special">
 							<li><a href="services.html#section-two" class="button">Learn More</a></li>
 						</ul>
