--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Contact - JBeta Surveying Enterprises</title>
+		<title>Contact - JB Surveying Enterprises</title>
 	    <link rel="icon" href="images/JB_LOGO.png"/>    
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -11,7 +11,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<h1><a href="index.html">JBETA<span>surveying</span></a></h1>
+				<h1><a href="index.html">JB<span>surveying</span></a></h1>
 				<nav id="nav">
 					<ul>
                         <li><a href="index.html">Home</a></li>
@@ -74,7 +74,7 @@
 				<li>E: <a target="_blank" href="mailto:jbetasurveyingenterprises@gmail.com">jbetasurveyingenterprises@gmail.com</a></li>
 			</ul>
 			<span class="copyright">
-				&copy; JBETA SURVEYING ENTERPRISES
+				&copy; JB SURVEYING ENTERPRISES
 			</span>
 		</footer>
 
