--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-	<title>Home - JBeta Surveying Enterprises</title>
+	<title>Home - JB Surveying Enterprises</title>
 	<link rel="icon" href="images/JB_LOGO.png"/>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -14,7 +14,7 @@
 
 	<!-- Header -->
 	<header id="header" class="alt ">
-		<h1><a href="index.html">JBETA<span>surveying</span></a></h1>
+		<h1><a href="index.html">JB<span>surveying</span></a></h1>
 		<nav id="nav">
 			<ul>
 				<li><a href="index.html">Home</a></li>
@@ -27,7 +27,7 @@
 	<!-- Banner -->
 	<section id="banner">
 		<div class="inner">
-			<img class="logo-img" src="/images/jb-logo.png" alt="logo">
+			<img class="logo-img" src="/images/new-logo5.png" alt="logo">
 			<ul class="actions special">
 				<li><a href="#one" class="button large scrolly">Learn More</a></li>
 			</ul>
@@ -103,7 +103,7 @@
 		<div class="container">
 			<header class="major">
 				<h2>Services We Offer</h2>
-				<p class="section-text">No matter the task, the scope nor the environment, JBETA Surveying Enterprises can offer many different surveying services depended on the client's needs.  We work closely with engineers, architects, planners, lawyers, contractors and consultants at all phases of the project to ensure all the requirements are met, achieving the greatest value to our clients. Every project has different needs, we can help advising on exactly what surveying services you are required and we can provide.</p>
+				<p class="section-text">No matter the task, the scope nor the environment, JB Surveying Enterprises can offer many different surveying services depended on the client's needs.  We work closely with engineers, architects, planners, lawyers, contractors and consultants at all phases of the project to ensure all the requirements are met, achieving the greatest value to our clients. Every project has different needs, we can help advising on exactly what surveying services you are required and we can provide.</p>
 			</header>
 			<div class="row">
 				<div class="col-6 col-6-medium col-12-small" data-aos="fade-up" data-aos-duration="3000">
@@ -120,7 +120,7 @@
 					<article class="box post">
 						<a href="images/drone.jpg" class="image fit"><img src="images/drone.jpg" alt="" /></a>
 						<h3>Droning</h3>
-						<p>If you would like more information on what we can offer as droners, please click the link below.</p>
+						<p>If you would like more information on what we can offer as droner, please click the link below.</p>
 						<ul class="actions special">
 							<li><a href="services.html#section-two" class="button">Learn More</a></li>
 						</ul>
@@ -141,7 +141,7 @@
 			<li>E: <a target="_blank" href="mailto:jbetasurveyingenterprises@gmail.com">jbetasurveyingenterprises@gmail.com</a></li>
 		</ul>
 		<span class="copyright">
-			&copy; JBETA SURVEYING ENTERPRISES
+			&copy; JB SURVEYING ENTERPRISES
 		</span>
 	</footer>
 
