--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 				<div class="col-6 col-6-medium col-12-small" data-aos="fade-up" data-aos-duration="3000">
 					<article class="box post">
 						<a href="images/drone.jpg" class="image fit"><img src="images/drone.jpg" alt="" /></a>
-						<h3>Droning</h3>
+						<h3>Drone Surveying</h3>
 						<p>If you would like more information on what we can offer as droner, please click the link below.</p>
 						<ul class="actions special">
 							<li><a href="services.html#section-two" class="button">Learn More</a></li>
