--- a/contact.html
+++ b/contact.html
@@ -67,11 +67,11 @@
         <footer id="footer">
 			<ul class="icons">
 				<li><a target="_blank" href="https://www.linkedin.com/in/betancourtjuan/" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
-				<li><a target="_blank" href="mailto:jbetasurveyingenterprises@gmail.com" class="icon fa-envelope"><span class="label">Envelope</span></a></li>
+				<li><a target="_blank" href="mailto:JBsurveyingenterprises@gmail.com" class="icon fa-envelope"><span class="label">Envelope</span></a></li>
 			</ul>
 			<ul class="menu">
 				<li>P: <a href="tel:6472240884">647-224-0884</a></li>
-				<li>E: <a target="_blank" href="mailto:jbetasurveyingenterprises@gmail.com">jbetasurveyingenterprises@gmail.com</a></li>
+				<li>E: <a target="_blank" href="mailto:JBsurveyingenterprises@gmail.com">JBsurveyingenterprises@gmail.com</a></li>
 			</ul>
 			<span class="copyright">
 				&copy; JB SURVEYING ENTERPRISES
