--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 
 	<!-- Header -->
 	<header id="header" class="alt ">
-		<h1><a href="index.html">JB<span>surveying</span></a></h1>
+		<!-- <h1><a href="index.html">JB<span>surveying</span></a></h1> -->
+		<a style="text-decoration: none" class="link" href="."><img class="logo-header" src="/images/new-logo5.png" alt="logo"></a>
 		<nav id="nav">
 			<ul>
 				<li><a href="index.html">Home</a></li>
@@ -109,7 +110,7 @@
 				<div class="col-6 col-6-medium col-12-small" data-aos="fade-up" data-aos-duration="3000">
 					<article class="box post">
 						<a href="images/surveying.jpg" class="image fit"><img src="images/surveying.jpg" alt="" /></a>
-						<h3>Surveying</h3>
+						<h3>Ground Surveying</h3>
 						<p>If you would like more information on what we can offer as surveyors, please click the link below.</p>
 						<ul class="actions special">
 							<li><a href="services.html#section-one" class="button">Learn More</a></li>
@@ -119,8 +120,8 @@
 				<div class="col-6 col-6-medium col-12-small" data-aos="fade-up" data-aos-duration="3000">
 					<article class="box post">
 						<a href="images/drone.jpg" class="image fit"><img src="images/drone.jpg" alt="" /></a>
-						<h3>Drone Surveying</h3>
-						<p>If you would like more information on what we can offer as droner, please click the link below.</p>
+						<h3>Aerial Surveying</h3>
+						<p>If you would like more information on what we can offer with our aerial surveying, please click the link below.</p>
 						<ul class="actions special">
 							<li><a href="services.html#section-two" class="button">Learn More</a></li>
 						</ul>
@@ -135,6 +136,7 @@
 		<ul class="icons">
 			<li><a target="_blank" href="https://www.linkedin.com/in/betancourtjuan/" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
 			<li><a target="_blank" href="mailto:JBsurveyingenterprises@gmail.com" class="icon fa-envelope"><span class="label">Envelope</span></a></li>
+			<li><a target="_blank" href="https://wa.me/2894420564" class="icon fa-whatsapp"></a></li>
 		</ul>
 		<ul class="menu">
 			<li>P: <a href="tel:2894420564">289-442-0564</a></li>
