--- a/services.html
+++ b/services.html
@@ -122,6 +122,7 @@
 			<ul class="icons">
 				<li><a target="_blank" href="https://www.linkedin.com/in/betancourtjuan/" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
 				<li><a target="_blank" href="mailto:JBsurveyingenterprises@gmail.com" class="icon fa-envelope"><span class="label">Envelope</span></a></li>
+				<li><a target="_blank" href="https://wa.me/2894420564" class="icon fa-whatsapp"></a></li>
 			</ul>
 			<ul class="menu">
 				<li>P: <a href="tel:2894420564">289-442-0564</a></li>
