--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<!-- Header -->
 	<header id="header" class="alt ">
 		<!-- <h1><a href="index.html">JB<span>surveying</span></a></h1> -->
-		<a style="text-decoration: none" class="link" href="."><img class="logo-header" src="/images/new-logo5.png" alt="logo"></a>
+		<a class="link" href="."><img class="logo-header" src="/images/new-logo5.png" alt="logo"></a>
 		<nav id="nav">
 			<ul>
 				<li><a href="index.html">Home</a></li>
