--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,8 @@
 
 		<!-- Header -->
 			<header id="header">
-				<h1><a href="index.html">JB<span>surveying</span></a></h1>
+				<!-- <h1><a href="index.html">JB<span>surveying</span></a></h1> -->
+				<a class="link" href="."><img class="logo-header" src="/images/new-logo5.png" alt="logo"></a>
 				<nav id="nav">
 					<ul>
                         <li><a href="index.html">Home</a></li>
